fixed column margins on very large screens, h1 gap on very small screens

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ body {
 }
 
 main {
+    width: fit-content;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -72,7 +73,6 @@ main {
     flex-direction: column;
     gap: 1em;
     max-width: 800px;
-    margin: 0 auto;
 }
 header {
     width: fit-content;
@@ -99,6 +99,11 @@ h1 {
 @media screen and (max-width: 800px) {
     h1 {
         font-size: 2.3em;
+    }
+}
+@media screen and (max-width: 600px) {
+    h1 {
+        gap: 0;
     }
 }
 
